--- a/account/invoice/index.html
+++ b/account/invoice/index.html
@@ -226,10 +226,8 @@
                   <a class="dropdown-item hidden" href="../settings/" name="param-link" perm="settings">Update Information</a>
                   <a class="dropdown-item hidden" href="../team/" name="param-link" perm="team">Team</a>
 									<div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="../../">Back to Home</a>
                   <a class="dropdown-item" href="javascript:;" data-toggle="modal" data-target="#signOutModal" onclick="signOutFunction()" id="btn-logout">Log out</a>
-									<div class="dropdown-divider"></div>
-									<a style="font-weight: 500 ;padding: 0.5em ;text-align: center; width: 200px; background-color: #428dd4 ;display: block; color: #fff;" href="https://golearn.com.my/pricing/" target="_blank">Upgrade to Pro</a>
-
                 </div>
               </li>
             </ul>
