--- a/account/student/edit-student.html
+++ b/account/student/edit-student.html
@@ -567,7 +567,7 @@
   <script src="../../assets/js/star-rating.js" type="text/javascript"></script>
   <script src="../../assets/js/star-rating-theme.js" type="text/javascript"></script>
   <!-- International Telephone Input -->
-  <script src="../../assets/js/plugins/intlTelInput/intlTelInput.js"></script>
+  <script src="../../assets/js/plugins/intlTelInput/intlTelInput.min.js"></script>
 
   <script>
 
