--- a/account/payroll/run-payroll.html
+++ b/account/payroll/run-payroll.html
@@ -1643,7 +1643,7 @@
   <!-- Date range picker -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <!-- International Telephone Input -->
-  <script src="../../assets/js/plugins/intlTelInput/intlTelInput.js"></script>
+  <script src="../../assets/js/plugins/intlTelInput/intlTelInput.min.js"></script>
   <!-- Html 2 PDF -->
   <!-- <script src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>  -->
   <script src="../../assets/js/html2pdf.js" type="text/javascript"></script>
