--- a/index.html
+++ b/index.html
@@ -397,6 +397,8 @@
   <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <script src="./assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
+  <script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+
   <!-- Notifications Plugin -->
   <script src="./assets/js/plugins/bootstrap-notify.js"></script>
   <!-- Common constants -->
