Change to production

--- a/account/class/add-class.html
+++ b/account/class/add-class.html
@@ -33,7 +33,7 @@
     const orgUrl = new URL(window.location.href).searchParams.get("url");
     const orgEnt = new URL(window.location.href).searchParams.get("ent");
     if (orgUrl === null || orgUrl === "" || orgEnt === null || orgEnt === "")
-      window.location.href = 'http://127.0.0.1:8080/'+'?url=' + orgUrl + "&ent=" + orgEnt;
+      window.location.href = 'http://org.golearn.com.my/'+'?url=' + orgUrl + "&ent=" + orgEnt;
   </script>
   <link href="../../assets/css/multistepform.css" rel="stylesheet" />
   <!-- Tutor Portal specific CSS -->
