--- a/account/transaction/settings.html
+++ b/account/transaction/settings.html
@@ -32,7 +32,7 @@
     const orgUrl = new URL(window.location.href).searchParams.get("url");
     const orgEnt = new URL(window.location.href).searchParams.get("ent");
     if (orgUrl === null || orgUrl === "" || orgEnt === null || orgEnt === "")
-      window.location.href = 'http://127.0.0.1:8080/'+'?url=' + orgUrl + "&ent=" + orgEnt;
+      window.location.href = 'http://org.golearn.com.my/'+'?url=' + orgUrl + "&ent=" + orgEnt;
   </script>
   <!-- Rich Text Editor Init -->
   <script src="https://cdn.tiny.cloud/1/5dm77axvxwkliu22hg2ejlaqh4s246uo83bz98ogo4c3yeev/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
