--- a/account/class/edit-class.html
+++ b/account/class/edit-class.html
@@ -35,7 +35,7 @@
     const orgUrl = new URL(window.location.href).searchParams.get("url");
     const orgEnt = new URL(window.location.href).searchParams.get("ent");
     if (orgUrl === null || orgUrl === "" || orgEnt === null || orgEnt === "")
-      window.location.href = 'http://127.0.0.1:8080/';
+      window.location.href = 'http://org.golearn.com.my/';
   </script>
   <link href="../../assets/css/multistepform.css" rel="stylesheet" />
   <link href="../../assets/css/multitabform.css" rel="stylesheet" />
