--- a/account/report/index.html
+++ b/account/report/index.html
@@ -35,7 +35,7 @@
     const orgUrl = new URL(window.location.href).searchParams.get("url");
     const orgEnt = new URL(window.location.href).searchParams.get("ent");
     if (orgUrl === null || orgUrl === "" || orgEnt === null || orgEnt === "")
-      window.location.href = 'http://127.0.0.1:8080/'+'?url=' + orgUrl + "&ent=" + orgEnt;
+      window.location.href = 'http://org.golearn.com.mym.mym.mym.my/'+'?url=' + orgUrl + "&ent=" + orgEnt;
   </script>
   <!-- Screen Loading -->
   <style>
