--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
           <div class="col-md-9">
             <div class="row" id="allRole">
-              <div class="col-md-4 mt-md-3 mt-5">
+              <div class="col-md-4 mt-md-3 mt-5 d-none">
                 <a href="./organization/?org=hsjjoiqwkajs">
                   <div class="card move-on-hover">
                     <div style="height: 150px;">
@@ -325,7 +325,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mt-md-3 mt-5">
+              <div class="col-md-4 mt-md-3 mt-5 d-none">
                 <a href="./account/?org=nhmuio92sd">
                   <div class="card move-on-hover">
                     <div style="height: 150px;">
@@ -338,7 +338,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mt-md-3 mt-5">
+              <div class="col-md-4 mt-md-3 mt-5 d-none">
                 <a href="./account/?org=6gsfg345">
                   <div class="card move-on-hover">
                     <div style="height: 150px;">
@@ -351,7 +351,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-md-4 mt-md-3 mt-5">
+              <div class="col-md-4 mt-md-3 mt-5 d-none">
                 <a href="javascript:;">
                   <div class="card move-on-hover">
                     <div class="" style="position: absolute; top: 8px; left: 4px;">
@@ -659,7 +659,7 @@
       })
       .then(() => {
         window.open(
-            "http://127.0.0.1:8080/account/?url=" + url +  "&ent="+ newAccId , "_blank");
+            "http://org.golearn.com.my/account/?url=" + url +  "&ent="+ newAccId , "_blank");
 
       })
       .then(() => {
